2007-01-12 [paul]	2.7.0cvs3-stable

	* src/procmime.c
		From 2.7.0cvs13:
		fix Forwarding msgs with attachments
		that have dos line endings

2007-01-11 [colin]	2.7.0cvs2-stable

	* src/imap.c
		From 2.7.0cvs10:
		move g_warning to debug_print
		it scares people for no reason

2007-01-11 [paul]	2.7.0cvs1-stable

	* src/imap.c
		From 2.7.0cvs8: 
		Fix recursion when server lists the
		current subfolder in the response
	* src/mimeview.c
		From 2.7.0cvs8:
		Fix updating of icon_list/ctree
	* src/plugins/pgpcore/select-keys.c
		From 2.7.0cvs8:
		Fix a few annoyances when choosing
		keys for the CMS (S/MIME) protocol
	* src/mainwindow.c
		From 2.7.0cvs5:
		Fix bug 1095, 'Crash while changing folder
		columns during incorporation'
	* src/gtk/pluginwindow.c
		From 2.7.0cvs4:
		Set the plugin window transient. Seems
		like some window managers hide it in
		the background after "load plugin"...
	* src/gtk/filesel.c
		From 2.7.0cvs3:
		Use the same type for alloc and free

2007-01-08 [paul]	2.7.0

	* NEWS
	* README
	* RELEASE_NOTES
		2.7.0 released

2007-01-08 [paul]	2.6.1cvs119

	* doc/man/claws-mail.1
		another correction

2007-01-08 [paul]	2.6.1cvs118

	* doc/man/claws-mail.1
		corrections
	* manual/advanced.xml
		improved English usage

2007-01-08 [paul]	2.6.1cvs117

	* po/ca.po
	* po/de.po
	* po/en_GB.po
	* po/fi.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
	* po/sr.po
	* po/zh_CN.po
		updated by Miquel Oliete, Stephan Sachse, me,
		Tommi Pirinen, Andrea Spadaccini, Frederico
		Goncalves Guimaraes, Andrej Kacian, Aleksandar
		Urosevic, and Ralgh Young

2007-01-07 [mones]	2.6.1cvs116

	* manual/es/advanced.xml
	* po/es.po
		Synced manual (unhide mark_as_read_delay)
		and updated translation for release

2007-01-07 [paul]	2.6.1cvs115

	* src/prefs_matcher.c
		make the hbox content fit better under
		various languages

2007-01-07 [colin]	2.6.1cvs114

	* src/messageview.c
		Fix bug 1088, 'Ctrl-h produces repeatable
		crash'

2007-01-06 [colin]	2.6.1cvs113
